* minor updates and, - classes removed