@@ -33,6 +33,7 @@ import ru.myx.ae3.control.field.ControlField;
 import ru.myx.ae3.control.fieldset.ControlFieldset;
 import ru.myx.ae3.help.Convert;
 import ru.myx.ae3.help.Create;
+import ru.myx.ae3.help.Format;
 import ru.myx.ae3.report.Report;
 import ru.myx.jdbc.lock.Runner;
 import ru.myx.util.EntrySimple;
@@ -292,7 +293,7 @@ final class RunnerChangeUpdate implements Runnable, Runner {
 				if (rs.next()) {
 					final List<Object> result = new ArrayList<>();
 					do {
-						result.add(new Integer(rs.getInt(1)));
+						result.add(Integer.valueOf(rs.getInt(1)));
 						result.add(rs.getString(2));
 					} while (rs.next());
 					return result;
@@ -490,7 +491,7 @@ final class RunnerChangeUpdate implements Runnable, Runner {
 					final List<Object> result = new ArrayList<>();
 					do {
 						result.add(rs.getString(1));
-						result.add(new Integer(rs.getInt(2)));
+						result.add(Integer.valueOf(rs.getInt(2)));
 					} while (rs.next());
 					return result;
 				}
@@ -613,7 +614,7 @@ final class RunnerChangeUpdate implements Runnable, Runner {
 				while (rs.next()) {
 					linkData.add(rs.getString(1));
 					linkData.add(rs.getString(2));
-					linkData.add(new Integer(rs.getInt(3)));
+					linkData.add(Integer.valueOf(rs.getInt(3)));
 				}
 			}
 		}
@@ -1077,7 +1078,7 @@ final class RunnerChangeUpdate implements Runnable, Runner {
 			try (final ResultSet rs = ps.executeQuery()) {
 				while (rs.next()) {
 					linkData.add(rs.getString(1));
-					linkData.add(new Integer(rs.getInt(2)));
+					linkData.add(Integer.valueOf(rs.getInt(2)));
 				}
 			}
 		}
@@ -1163,7 +1164,12 @@ final class RunnerChangeUpdate implements Runnable, Runner {
 								Report.event(
 										RunnerChangeUpdate.OWNER,
 										"INDEXING",
-										"skipped, already done, guid=" + lnkId + ", luid=" + lnkLuid + ", indexedAt=" + indexed + ", requestedAt=" + new Date(date));
+										"skipped, already done" //
+												+ ", guid=" + lnkId //
+												+ ", luid=" + lnkLuid //
+												+ ", indexedAt=" + indexed //
+												+ ", requestedAt=" + Format.Ecma.date(date)//
+								);
 								return;
 							}
 						}
@@ -1197,7 +1203,7 @@ final class RunnerChangeUpdate implements Runnable, Runner {
 				while (rs.next()) {
 					final String lnkId = rs.getString(1);
 					linkData.add(lnkId);
-					linkData.add(new Integer(rs.getInt(2)));
+					linkData.add(Integer.valueOf(rs.getInt(2)));
 					this.invalidations.add(InvalidationEventType.ULINK, lnkId);
 					this.invalidations.add(InvalidationEventType.UTREE, rs.getString(3));
 				}
@@ -1286,7 +1292,7 @@ final class RunnerChangeUpdate implements Runnable, Runner {
 			ps.setMaxRows(RunnerChangeUpdate.LIMIT_BULK_UPGRADE);
 			try (final ResultSet rs = ps.executeQuery()) {
 				while (rs.next()) {
-					toUpgrade.add(new EntrySimple<>(rs.getString(1), new Integer(rs.getInt(2))));
+					toUpgrade.add(new EntrySimple<>(rs.getString(1), Integer.valueOf(rs.getInt(2))));
 				}
 			}
 		}
@@ -1480,7 +1486,7 @@ final class RunnerChangeUpdate implements Runnable, Runner {
 									task.put("evtId", rs.getString(1));
 									task.put("evtCmdType", rs.getString(2));
 									task.put("evtCmdGuid", rs.getString(3));
-									task.put("evtCmdLuid", new Integer(rs.getInt(4)));
+									task.put("evtCmdLuid", Integer.valueOf(rs.getInt(4)));
 									tasks.add(task);
 								} while (rs.next());
 							} else {
